--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
 .red {
   background: red;
 }
+.todo {
+  display: flex;
+  flex-wrap: wrap;
+}
+.todo .board {
+  width: 300px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+  box-sizing: border-box;
+  margin-right: 20px;
+  min-height: 200px;
+}
+.todo .board .task {
+  width: 100%;
+  border: 1px solid #ccc;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
